--- a/task_11/absolute/starbuzz.css
+++ b/task_11/absolute/starbuzz.css
@@ -15,17 +15,18 @@ body {
   background:       #efe5d0 url(images/background.gif) top left;
   font-size:        105%;
   padding:          15px;
-  margin:           10px;
-  margin: 			0px 10px 10px 10px;
-  width: 			420px;
-  float: 			left;
+  margin:           0px 330px 10px 10px;
 }
 
 #sidebar {
   background:       #efe5d0 url(images/background.gif) bottom right;
   font-size:        105%;
   padding:          15px;
-  margin:           0px 10px 10px 470px;
+  margin:           0px 10px 10px 10px;
+  position: 		absolute;
+  top: 				128px;
+  right: 			0px;
+  width: 			280px;
 }
 
 #footer {
@@ -35,17 +36,8 @@ body {
   padding:          15px;
   margin:           10px;
   font-size:        90%;
-  clear: 			left;
 }
 
-#allcontent{
-  width: 			800px;
-  padding-top:		5px;
-  padding-bottom:	5px;	
-  background-color:	#675c47;
-  margin-left: 		auto;
-  margin-right: 	auto;
-}
 h1 {
   font-size:        120%;
   color:            #954b4b;
@@ -68,3 +60,4 @@ a:visited {
   text-decoration:  none;
   border-bottom:    thin dotted #675c47;
 }
+
