--- a/task_11/starbuzz-complete/starbuzz.css
+++ b/task_11/starbuzz-complete/starbuzz.css
@@ -6,26 +6,64 @@ body {
 }
 
 #header {
-  background-color: #675c47;
-  margin:           10px;
-  height:           108px;
+	background-color: #675c47;
+	margin: 10px 10px 0px 10px;
+	height:           108px;
+}
+
+#header img#headerSlogan {
+	float: right;
+}
+
+/* REMOVE FOR CHAP 12 */
+#award {
+	position: absolute;
+	top: 30px;
+	left: 365px;
+}
+
+#coupon {
+    position: fixed;
+	top: 350px;
+	left: -90px;
+}
+
+#coupon a, img {
+    border: none;
+}
+/*---*/
+
+#tableContainer {
+	display: table;
+	border-spacing: 10px;
+}
+
+#tableRow {
+	display: table-row;
+}
+
+#drinks {
+    display: table-cell;
+    background-color: #efe5d0;
+    width: 20%;
+    padding: 15px;
+    vertical-align: top;
 }
 
 #main {
+  display: table-cell;
   background:       #efe5d0 url(images/background.gif) top left;
   font-size:        105%;
   padding:          15px;
-  margin:           10px;
-  margin: 			0px 10px 10px 10px;
-  width: 			420px;
-  float: 			left;
+  vertical-align: top;
 }
 
 #sidebar {
+  display: table-cell;
   background:       #efe5d0 url(images/background.gif) bottom right;
   font-size:        105%;
   padding:          15px;
-  margin:           0px 10px 10px 470px;
+  vertical-align: top;
 }
 
 #footer {
@@ -33,23 +71,16 @@ body {
   color:            #efe5d0;
   text-align:       center;
   padding:          15px;
-  margin:           10px;
+  margin: 0px 10px 10px 10px;
   font-size:        90%;
-  clear: 			left;
 }
 
-#allcontent{
-  width: 			800px;
-  padding-top:		5px;
-  padding-bottom:	5px;	
-  background-color:	#675c47;
-  margin-left: 		auto;
-  margin-right: 	auto;
-}
 h1 {
   font-size:        120%;
   color:            #954b4b;
 }
+
+h2 { font-size: 110%; }
 
 .slogan { color: #954b4b; }
 
@@ -68,3 +99,8 @@ a:visited {
   text-decoration:  none;
   border-bottom:    thin dotted #675c47;
 }
+
+
+
+
+
